# seg2io

./: AUTHORS.md  CITATION.cff  pyproject.toml  setup.cfg  setup.py
seg2io/: __init__.py  seg2io.py
seg2io/test_data/: data_OYO.sg2
