[metadata]
name = seg2io
version = attr: snowfake.__version__
author = Martin Bentley
author_email = hello@agilescientific.com
description = Load seg2 files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/agilescientific/seg2io
classifiers =
    Intended Audience :: Science/Research
    Development Status :: 3 - Alpha
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = seg2io
python_requires = >=3.6
install_requires =
    numpy
    matplotlib
    scipy
    tqdm
    myst-parser
    xarray

[options.extras_require]
skimage = scikit-image
test = pytest; pytest-cov; scikit-image
docs = sphinx; sphinxcontrib-apidoc; furo; myst_parser
dev = pytest; pytest-cov; scikit-image; sphinx; sphinxcontrib-apidoc; furo; myst_parser
